tests/parser/should_fail/readFail037.hs
{-# LANGUAGE Haskell2010 #-}

module Foo where

class Foo a b

