tests/parser/should_fail/readFail037.stderr

readFail037.hs:5:1: error: [GHC-28349]
    • Too many parameters for class ‘Foo’
    • In the class declaration for ‘Foo’
    Suggested fix:
      Perhaps you intended to use the ‘MultiParamTypeClasses’ extension (implied by ‘FunctionalDependencies’)
